# makemore-copy

./: .gitignore  pyproject.toml  test.ipynb
makemore/: 01_makemore_first_nb.ipynb
